<resources>

    <string name="app_name">Gladiance</string>
    <string name="app_name_ble">ESP BLE Prov</string>
    <string name="app_name_softap">ESP SoftAP Prov</string>

    <!-- Screen Titles -->
    <string name="title_activity_connect_device">Connect to Device</string>
    <string name="title_activity_pop">Proof of Possession</string>
    <string name="title_activity_wifi_scan_list">Select Wi-Fi Network</string>
    <string name="title_activity_wifi_config">Wi-Fi Configuration</string>
    <string name="title_activity_provisioning">Provisioning</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_device">Add Device</string>

    <!-- Button Text -->
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="btn_provision">Provision</string>
    <string name="btn_scan_qr_code">Scan QR Code</string>
    <string name="btn_provision_device">Provision New Device</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_connecting">Connecting&#8230;</string>
    <string name="btn_wifi_settings">Go to Wi-Fi Settings</string>
    <string name="btn_scan_again">Scan Again</string>
    <string name="btn_no_qr_code">I don\'t have a QR code</string>
    <string name="btn_save">Save</string>
    <string name="btn_change_prefix">Change</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_get_permission">Get Permission</string>

    <!-- Hint Text -->
    <string name="hint_pop">Proof of Possession</string>
    <string name="hint_ssid">Network Name</string>
    <string name="hint_value">Enter Value</string>
    <string name="hint_password">Password</string>

    <!-- Instruction Strings -->
    <string name="pop_instruction">Enter your proof of possession PIN for</string>
    <string name="setup_instructions">To complete setup of your device %1$s, please provide your Home Network\'s credentials.</string>
    <string name="connect_device_instruction_general">To provision your device, make sure it is turned ON. Connect your mobile phone to the Wi-Fi network with a name like PROV_XXXXXX</string>
    <string name="connect_device_instruction_specific">To provision your device, make sure it is turned ON. Connect your mobile phone to the Wi-Fi network with the name</string>

    <!-- Provisioning Steps Strings -->
    <string name="prov_step_1">Sending Wi-Fi credentials</string>
    <string name="prov_step_2">Applying Wi-Fi connection</string>
    <string name="prov_step_3">Checking provisioning status</string>
    <string name="error_session_creation">Failed to create session</string>
    <string name="error_prov_step_1">Failed to send Wi-Fi credentials</string>
    <string name="error_prov_step_2">Failed to apply Wi-Fi credentials</string>
    <string name="error_prov_step_3">Failed to provisioning device</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_provision_landing">Connect to device</string>
    <string name="connected_to_device_instructions">You are now connected to the device. To provision the device, please enter your Network credentials on the next page.</string>
    <string name="no_internet_note">To make sure you are really connected to the device, please make sure you accept the system dialog informing you that network has no internet access.</string>
    <string name="connect_to_device_action">Connect</string>
    <string name="connected_to_device_action">Provision Network</string>
    <string name="title_activity_provision_instructions">Provision Instructions</string>
    <string name="ssid_hint_text">Network Name</string>
    <string name="password_hint_text">Password</string>
    <string name="provision">Provision</string>

    <string name="success_text">Device has been successfully provisioned!</string>
    <string name="wifi_disconnected_text">Please check the device indicators for provisioning status.</string>
    <string name="done">Done</string>

    <string name="enable_bluetooth_instructions">To provision your new device, please make sure that your Phone\'s Bluetooth is turned on and within range of your new device.</string>
    <string name="enabled_bluetooth_instructions">To provision the device, please enter your Network credentials on the next page.</string>
    <string name="enable_bluetooth_action">Enable</string>
    <string name="enabled_bluetooth_action">Provision Network</string>

    <!-- Strings used for Progress -->
    <string name="progress_scanning">Scanning Devices...</string>
    <string name="progress_get_status">Getting Status</string>
    <string name="progress_loading">Loading...</string>

    <!--Error Messages-->
    <string name="error_title">Error!</string>
    <string name="error_ble_not_supported">Sorry! BLE is not supported.</string>
    <string name="error_bluetooth_not_supported">Sorry! Bluetooth is not supported.</string>
    <string name="error_device_not_supported">Communication failed. Device may not be supported.</string>
    <string name="error_device_transport_not_supported">Device may not be supported.</string>
    <string name="error_network_not_found">Network not found.</string>
    <string name="error_authentication_failed">Wi-Fi Authentication failed.</string>
    <string name="error_unknown">Device provisioning failed. Reason : Unknown.</string>
    <string name="error_pop_incorrect">Please retry with correct proof of possession PIN.</string>
    <string name="error_no_ble_device">No Bluetooth devices found!</string>
    <string name="error_device_connect_failed">Failed to connect with device.</string>
    <string name="error_ssid_empty">Network name cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_provisioning">Reset your board to factory defaults and retry</string>
    <string name="error_wifi_off">Please turn on Wi-Fi to connect with device.</string>
    <string name="error_security_mismatch">Security applied for communicating with device does not match configuration setting</string>
    <string name="error_camera_permission">Camera permission is not given. App will not be able to scan QR code to add device.</string>
    <string name="error_location_permission">Location permission is not given. It will be required to add BLE or SoftAP devices.</string>

    <string name="prefix">Prefix :</string>
    <string name="hint_prefix">Enter Prefix</string>
    <string name="hint_key">Enter PIN</string>
    <string name="devices_title">Devices</string>
    <string name="enter_device_key">Enter Your Proof Of Possession PIN</string>
    <string name="app_version">App Version</string>
    <string name="powered_by_esp">Powered by Gladiance</string>

    <string name="join_other_network">Join Other Network</string>
    <string name="networks">Networks</string>
    <string name="connect_your_device">Connect to your device</string>

    <string name="dialog_msg_gps">Location services are disabled. Please enable them to continue</string>
    <string name="dialog_msg_device_selection">Select Device Type</string>
    <string name="looking_for_qr_code">Looking for QR Code</string>
    <string name="position_camera_for_qr_code">Please position the camera to point at the QR Code.</string>
    <string name="dialog_title_network_info">Enter Network Information</string>
    <string name="dialog_msg_ble_device_disconnection">Device disconnected</string>

    <!-- Preference Titles -->
    <string name="device_settings">Device Settings</string>

    <!-- Messages Preferences -->
    <string name="device_selection_title">Supported Device Types</string>
    <string name="security_selection_title">Encrypted Communication</string>
    <string name="username_pref_title">Set Username</string>
    <string name="username_selection_title">Username</string>
    <string name="summary_secured">Secured</string>
    <string name="summary_unsecured">Unsecured</string>
    <string name="summary_username">(Applicable for security version 2)</string>

    <!--    Notification strings-->
    <string name="channel_node_connected">Node Connected</string>
    <string name="channel_node_disconnected">Node Disconnected</string>
    <string name="channel_node_added">Node Added</string>
    <string name="channel_node_removed">Node Removed</string>
    <string name="channel_node_sharing">Node Sharing</string>
    <string name="channel_node_alert">Alert Messages</string>
    <string name="channel_node_automation_trigger">Automation Triggers</string>


    <!--    Gladiance-->
    <string name="title_activity_login">Login</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="TermsAndCondition">I agree Privacy Police &amp; User Agreement</string>
    <string name="SignUp">Don\'t have an account ? Sign Up</string>
    <string name="Login">Already Have an account ? Login</string>
    <string name="Resent">haven\'t received the code ? Resend here</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <array name="custom_colors">

        <item>#219806</item>
        <item>#F44336</item>
        <item>#FFEB3B</item>

    </array>
    <string name="title_activity_alexa_app_linking">AlexaAppLinkingActivity</string>

    <string name="msg_no_internet">No internet connection</string>
    <string name="btn_unlink_alexa">Unlink from Amazon Alexa</string>
    <string name="btn_link_alexa">Link with Amazon Alexa</string>
    <string name="title_activity_amazon_alexa">Amazon Alexa</string>
    <string name="progress_add_sch">Adding Schedule...</string>
    <string name="alexa_link_instruction">Linking your account with Amazon Alexa allows you to control your Smart Home Devices using Voice commands via Alexa enabled speakers. (E.g. Alexa, Turn on the Light)</string>

    <string name="linked_with_alexa">Already linked with Amazon Alexa</string>
    <string name="alexa_link_str">You can now control your Smart Home Devices via Alexa enabled speakers using Voice commands.</string>
    <string name="alexa_example_1">Alexa, turn on the boiler switch.</string>
    <string name="alexa_example_2">Alexa, turn on the kitchen light.</string>
    <string name="alexa_example_3">Alexa, set kitchen light to red.</string>

    <string name="dialog_title_unlink_skill">Disable Skill</string>
    <string name="dialog_msg_unlink_skill">Do you want to unlink your account?</string>

    <string name="Yes">YES</string>

    <string name="compose_shortcut_short_label0">Project Landing</string>
    <string name="compose_shortcut_short_label1">Space Landing</string>
    <string name="title_activity_edit_project">EditProjectActivity</string>
</resources>
