<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gladiance.ui.activities.AlexaLinking.AlexaAppLinkingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_amazon_alexa"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_alexa_link"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_alexa_link"
            android:layout_width="216dp"
            android:layout_height="102dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_alexa_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_alexa_link_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:gravity="center"
            android:padding="@dimen/margin_16"
            android:text="@string/alexa_link_instruction"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_alexa_link" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_alexa_unlink"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_32"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_alexa"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_alexa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_link_alexa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/linked_with_alexa"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_alexa" />

        <TextView
            android:id="@+id/tv_link_alexa_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:text="@string/alexa_link_str"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_link_alexa" />

        <TextView
            android:id="@+id/tv_alexa_str_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:gravity="center"
            android:padding="@dimen/margin_16"
            android:text="@string/alexa_example_1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_link_alexa_str" />

        <TextView
            android:id="@+id/tv_alexa_str_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_16"
            android:text="@string/alexa_example_2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_alexa_str_1" />

        <TextView
            android:id="@+id/tv_alexa_str_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_16"
            android:text="@string/alexa_example_3"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_alexa_str_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <include
        android:id="@+id/btn_alexa_app_link"
        layout="@layout/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_progress_app_linking"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_app_linking"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tv_loading_app_linking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_app_linking"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/progress_add_sch"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>